--- a/index.css
+++ b/index.css
@@ -445,15 +445,6 @@
 }
 
 
-@media only screen and (max-width: 1172px) {
-    /* .section-one-blob {
-        width: 20rem;
-    } */
-}
-
-
-
-
 
 
 
@@ -466,6 +457,7 @@
 
     .section-one {
         text-align: center;
+        margin: auto;
     }
 
     .section-one-heading {
@@ -473,6 +465,7 @@
         font-size: 6rem;
         font-weight: 500;
         text-align: center;
+
     }
 
     .section-one-heading span {
@@ -513,12 +506,19 @@
 
 
 @media only screen and (max-width: 768px) {
+
+    .section-one-content {
+        padding-right: 1.7rem;
+
+    }
+
     .section-one-heading {
         padding-top: 4rem;
         font-size: 4.75rem;
         line-height: 1.2;
         font-weight: 500;
         text-align: center;
+        margin: auto;
     }
 
     .about__main {
@@ -532,7 +532,7 @@
 
     .about__main-para {
         line-height: 1.7;
-        font-size: 1.25rem;
+        font-size: 1.1rem;
         font-weight: 400;
         width: 95%;
         text-align: center;
@@ -618,9 +618,11 @@
 
 
 @media only screen and (max-width: 442px) {
+
     .section-one-heading {
         font-size: 3.5rem;
         margin: auto;
+
     }
 
     .section-one-info {
@@ -630,6 +632,11 @@
         text-align: center;
         margin: auto;
 
+    }
+
+    .about__main-para {
+        line-height: 1.7;
+        font-size: 1.1rem;
     }
 }
 
