--- a/index.css
+++ b/index.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+::selection {
+    background-color: #1783d6;
+    color: #fff;
+}
+
 .navbar {
     background-color: #fff;
     box-shadow: 0 10px 100px rgba(0, 0, 0, .1);
@@ -63,7 +68,7 @@
 }
 
 .section-one-heading span {
-    color: #3B6AE2;
+    color: #0A6EBD;
     display: block;
     /* font-family: 'Raleway', sans-serif; */
 }
@@ -94,7 +99,7 @@
     left: 0;
     display: block;
     border-radius: 50px;
-    background: #59B3E9;
+    background: #30A2FF;
     width: 45px;
     height: 45px;
     transition: all 0.3s ease;
@@ -128,7 +133,7 @@
 
 .cta:hover:before {
     width: 100%;
-    background: #59B3E9;
+    background: #30A2FF;
     color: #f8f8f8;
 }
 
@@ -360,25 +365,24 @@
     margin-left: 20rem;
 }
 
-.custom-shape-divider-bottom-1688385310 {
+.custom-shape-01 {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     overflow: hidden;
     line-height: 0;
-    transform: rotate(180deg);
 }
 
-.custom-shape-divider-bottom-1688385310 svg {
+.custom-shape-01 svg {
     position: relative;
     display: block;
-    width: calc(215% + 1.3px);
-    height: 229px;
+    width: calc(142% + 1.3px);
+    height: 114px;
 }
 
-.custom-shape-divider-bottom-1688385310 .shape-fill {
-    fill: #3B6AE2;
+.custom-shape-01 .shape-fill {
+    fill: #0A6EBD;
 }
 
 /* Section: 3 */
@@ -469,6 +473,11 @@
 
 
 
+@media only screen and (max-width: 1450px) {
+    .custom-shape-01 {
+        display: none;
+    }
+}
 
 
 @media only screen and (max-width: 992px) {
@@ -486,7 +495,6 @@
         font-size: 6rem;
         font-weight: 500;
         text-align: center;
-
     }
 
     .section-one-heading span {
@@ -518,23 +526,12 @@
     .section-one-blob {
         display: none;
     }
-
-
 }
-
-
-@media only screen and (max-width: 1310px) {
-    .custom-shape-divider-bottom-1688385310 {
-        display: none;
-    }
-}
-
 
 @media only screen and (max-width: 768px) {
 
     .section-one-content {
         padding-right: 1.7rem;
-
     }
 
     .section-one-heading {
@@ -568,7 +565,6 @@
 
     .button-1 {
         margin-inline: auto;
-
     }
 
     .about__skills {
@@ -636,8 +632,6 @@
         padding: 1rem 1.6rem;
         margin-bottom: .8rem;
         display: block;
-
-
     }
 
     .skills-skill:hover {
@@ -652,7 +646,6 @@
     .section-one-heading {
         font-size: 3.5rem;
         margin: auto;
-
     }
 
     .section-one-info {
@@ -661,7 +654,6 @@
         line-height: 1.7;
         text-align: center;
         margin: auto;
-
     }
 
     .about__main-para {
@@ -688,6 +680,5 @@
         line-height: 1.7;
         text-align: center;
         margin: auto;
-
     }
 }
