--- a/index.css
+++ b/index.css
@@ -65,12 +65,13 @@
     font-size: 5rem;
     font-weight: 500;
     font-family: 'Raleway', sans-serif;
+
 }
 
 .section-one-heading span {
     color: #0A6EBD;
     display: block;
-    /* font-family: 'Raleway', sans-serif; */
+    font-family: 'Raleway', sans-serif;
 }
 
 .section-one-info {
@@ -392,6 +393,14 @@
     text-align: center;
 }
 
+.position-absolute {
+    width: 35%;
+    padding-top: 5rem;
+    opacity: 0.3;
+    left: 20%;
+    z-index: -1;
+}
+
 .projects-heading {
     padding-top: 4rem;
     font-size: 4rem;
@@ -404,7 +413,7 @@
 
 .card {
     position: relative;
-    width: 300px;
+    width: 310px;
     height: 200px;
     background-color: #f2f2f2;
     border-radius: 10px;
@@ -661,6 +670,11 @@
     .card {
         width: 100%;
         height: 100%;
+    }
+
+    .projects-heading {
+        padding-top: 2rem;
+        font-size: 4rem;
     }
 }
 
