--- a/index.css
+++ b/index.css
@@ -48,9 +48,8 @@
 
 
 /* Section: 1 */
-
 .section-one {
-    height: 92vh;
+    min-height: 92vh;
     width: 100%;
     position: relative;
 
@@ -190,7 +189,7 @@
 /* Section: 2 */
 
 .section-two {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background: rgb(248, 248, 248);
     background: linear-gradient(180deg, rgba(248, 248, 248, 1) 0%, rgba(255, 255, 255, 1) 91%);
@@ -390,27 +389,41 @@
 
 .projects {
     width: 100%;
+    min-height: 100vh;
     text-align: center;
 }
 
 .position-absolute {
     width: 35%;
     padding-top: 5rem;
+    /* padding-left: 30rem; */
     opacity: 0.3;
     left: 20%;
     z-index: -1;
 }
 
 .projects-heading {
-    padding-top: 4rem;
+    padding-top: 3rem;
     font-size: 4rem;
     font-weight: 500;
     letter-spacing: 1px;
-    /* text-transform: uppercase; */
     font-family: 'Raleway', sans-serif;
 
 }
 
+.projects-info {
+    color: #333;
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    font-weight: 400;
+    width: 75%;
+    margin: auto;
+    line-height: 1.6;
+}
+
+/* 
 .card {
     position: relative;
     width: 310px;
@@ -424,6 +437,7 @@
     perspective: 1000px;
     box-shadow: 0 0 0 5px #ffffff80;
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+   
 }
 
 .card img {
@@ -482,19 +496,54 @@
 
 .fa-arrow-up-right-from-square:hover {
     color: #0077B5;
+} */
+
+.projects-content row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+    text-align: center;
+    align-items: center;
 }
 
+.projects-image-01 img {
+    width: 35rem;
+    margin: auto;
+    /* position: absolute;
+    left: 0; */
+}
 
+.laptop-detail-heading {
+    margin-top: 1rem;
+    font-size: 3rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-align: center;
+}
 
+.laptop-detail-info {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    color: #333;
+    font-weight: 400;
+    text-align: center;
+}
 
+.laptop-detail-btn a {
+    background-color: #0077B5;
+    color: #fff;
+    padding: 0.7rem 2rem;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-decoration: none;
+}
 
-
-
-
-
-
-
-
+.laptop-img,
+.laptop-detail {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 
 
 
@@ -540,6 +589,24 @@
         height: 180px;
     }
 
+}
+
+@media only screen and (max-width: 1200px) {
+    .projects-image-01 img {
+        width: 30rem;
+        margin: auto;
+    }
+
+    .laptop-detail-heading {
+        margin-top: 1rem;
+        font-size: 2.7rem;
+        text-align: center;
+    }
+
+    .laptop-detail-info {
+        margin-top: 1rem;
+        font-size: 1.2rem;
+    }
 }
 
 
@@ -594,6 +661,26 @@
     .card {
         width: 100%;
         height: 12rem;
+    }
+
+    .projects-image-01 img {
+        width: 25rem;
+        margin: auto;
+    }
+
+    .laptop-detail {
+        padding-left: 3rem;
+    }
+
+    .laptop-detail-heading {
+        margin-top: 1rem;
+        font-size: 2.5rem;
+        text-align: center;
+    }
+
+    .laptop-detail-info {
+        margin-top: 1rem;
+        font-size: 1.1rem;
     }
 }
 
@@ -676,6 +763,34 @@
         padding-top: 2rem;
         font-size: 4rem;
     }
+
+    .projects-image-01 img {
+        width: 30rem;
+        margin: auto;
+    }
+
+    .laptop-detail {
+        padding-left: 3rem;
+    }
+
+    .laptop-detail-heading {
+        margin-top: 1rem;
+        font-size: 2.5rem;
+        text-align: center;
+    }
+
+    .laptop-detail-info {
+        margin-top: 1rem;
+        font-size: 1.1rem;
+    }
+
+    .laptop-img,
+    .laptop-detail {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+
 }
 
 
@@ -717,6 +832,27 @@
         background-color: #0077B5;
         color: #f8f8f8;
     }
+
+    .projects-image-01 img {
+        width: 23rem;
+        margin: auto;
+    }
+
+    .laptop-img,
+    .laptop-detail {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    .laptop-detail {
+        margin: auto;
+        text-align: center;
+        align-items: center;
+    }
+
+    .laptop-detail {
+        padding-left: 1.5rem;
+    }
 }
 
 
@@ -739,6 +875,8 @@
         line-height: 1.7;
         font-size: 1.1rem;
     }
+
+
 }
 
 
