--- a/index.css
+++ b/index.css
@@ -155,29 +155,31 @@
     font-size: 1.5rem;
 }
 
+.fa-linkedin-in {
+    color: #0077B5 !important;
+    background-color: transparent;
+}
+
+.fa-instagram {
+    color: #E1306C;
+}
+
+.fa-twitter {
+    color: #00ACEE;
+}
+
 .fa-linkedin-in:hover {
-    color: #0077B5;
+    color: #0077B5 !important;
+    background-color: transparent;
 }
 
 .fa-instagram:hover {
     color: #E1306C;
 }
 
-
 .fa-twitter:hover {
     color: #00ACEE;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 .section-one-blob {
     position: relative;
