--- a/index.css
+++ b/index.css
@@ -47,7 +47,8 @@
 }
 
 
-/* Section: 1 */
+/* _____________ Section: 1 _____________ */
+
 .section-one {
     min-height: 92vh;
     width: 100%;
@@ -188,7 +189,8 @@
 
 
 
-/* Section: 2 */
+/* _____________ Section: 2 _____________ */
+
 
 .section-two {
     min-height: 100vh;
@@ -261,9 +263,10 @@
     overflow: hidden;
     letter-spacing: 1px;
     transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+    width: 30%;
 }
 
-.button-1 span a {
+.button-1 span {
     color: #fff;
     text-decoration: none;
 }
@@ -329,12 +332,6 @@
     transform: translate(50%, 0) scale(1.1);
 }
 
-
-
-
-
-
-
 .about__skills-heading {
     text-align: start;
     margin-bottom: 1rem;
@@ -387,7 +384,8 @@
     fill: #0A6EBD;
 }
 
-/* Section: 3 */
+/* _____________ Section: 3 _____________ */
+
 
 .projects {
     width: 100%;
@@ -426,96 +424,21 @@
 }
 
 
-.project1-btn {
+.project-btn {
     background-color: #0077B5;
     color: #fff;
-    padding: .7rem 2rem;
+    padding: .6rem 1.7rem;
     margin-top: .5rem;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-transform: uppercase;
     letter-spacing: 2px;
     transition: .4s;
 }
 
-.project1-btn:hover {
+.project-btn:hover {
     background-color: #065d8c;
     color: #fff;
 }
-
-/* 
-.card {
-    position: relative;
-    width: 310px;
-    height: 200px;
-    background-color: #f2f2f2;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    perspective: 1000px;
-    box-shadow: 0 0 0 5px #ffffff80;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-   
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-    fill: #333;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2);
-}
-
-.card__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #f2f2f2;
-    transform: rotateX(-90deg);
-    transform-origin: bottom;
-    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.card:hover .card__content {
-    transform: rotateX(0deg);
-}
-
-.card__title {
-    margin: 0;
-    font-size: 24px;
-    color: #333;
-    font-weight: 700;
-}
-
-.card:hover svg {
-    scale: 0;
-}
-
-.card__description {
-    margin: 10px 0 0;
-    font-size: 1rem;
-    color: #777;
-    line-height: 1.4;
-}
-
-.fa-arrow-up-right-from-square {
-    margin-top: 1.5rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-.fa-arrow-up-right-from-square:hover {
-    color: #0077B5;
-} */
 
 .projects-content row {
     display: grid;
@@ -565,7 +488,8 @@
 }
 
 
-/* Footer */
+/* _____________ Footer _____________ */
+
 
 .footer {
     background-color: #0e4c7b;
@@ -600,20 +524,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Media Queries */
+/* _____________ Media Queries _____________ */
 
 @media only screen and (max-width: 1450px) {
     .custom-shape-01 {
@@ -646,6 +557,10 @@
     .laptop-detail-info {
         margin-top: 1rem;
         font-size: 1.2rem;
+    }
+
+    .button-1 {
+        width: 40%;
     }
 }
 
@@ -891,6 +806,10 @@
     .skills-skill:hover {
         background-color: #0077B5;
         color: #f8f8f8;
+    }
+
+    .button-1 {
+        width: 50%;
     }
 
     .projects-info {
